compiler/test-data/parser/errors/expressions/invalid_ternary.frel
module test

blueprint Bad {
    x : String = true ? "yes"
}
